--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,7 @@ ul li a:hover{
     color: #000;
 }
 #banner{
-    background-image: url(./images/banner.png);
+    background-image: url(/images/banner.png);
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
