--- a/css/estilos.css
+++ b/css/estilos.css
@@ -45,8 +45,14 @@ ul li a:hover{
     color: black;
     background-color: var(--verde);
 }
+.parallax .responsive-img{
+    max-width: 110%;
+}
 #materialbox-overlay{
     opacity: 0.8!important;
+}
+.title-insta{
+    font-size: 45px;
 }
 a.link-insta{
     background-color: black;
@@ -54,10 +60,8 @@ a.link-insta{
     border-radius: 100px;
     color: white;
     transition: 0.25s;
-    padding: 15px 3%;
-    
+    padding: 5px 2% 10px;
 }
-
 a.link-insta:hover{
     border: 5px solid black;
     color: black;
